test: PostServiceImpl·CommentServiceImpl 단위 테스트 추가 및 DRY 마무리
- PostServiceImpl: 11개 테스트 (createPost, getPost, deleteOwnPost, getPostsByFestivalId, getHotPosts, getPostsByArtistId)
- CommentServiceImpl: 10개 테스트 (createComment 이벤트 발행 분기, getCommentsByPost 인증 플래그, deleteOwnComment 권한, toggleLike 추가/취소)
- FileStorageService: uploadResizedJpeg/toSafeName 헬퍼 추출로 4개 메서드 중복 제거
- CommentServiceImpl: Collectors.toList() → .toList() + 중복 import 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>