@@ -30,7 +30,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -112,7 +111,7 @@ public class CommentServiceImpl implements CommentService {
                         c.getLikeCount(),
                         likedCommentIds.contains(c.getId())
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
